--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "markov-rs": "1.0.1",
     "mkdirp": "^1.0.4",
     "mongodb": "^3.5.9",
+    "mongoose": "^5.9.23",
     "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4",
@@ -64,6 +65,7 @@
     "@types/luxon": "^1.21.0",
     "@types/mkdirp": "^1.0.0",
     "@types/mongodb": "^3.5.25",
+    "@types/mongoose": "^5.7.29",
     "@types/node": "14.0.14",
     "@types/node-fetch": "^2.5.4",
     "@types/node-sass": "^4.11.1",
