--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cron": "^1.8.2",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
+    "emoji-unicode-map": "^1.1.10",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "ffmpeg-static": "^4.2.0",
