refactor: set up for web client support

--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "build": "tsc",
     "prestart": "yarn build",
     "start": "node lib/index.js",
-    "start:dev": "nodemon"
+    "start:dev": "concurrently --names server,client \"nodemon\" \"webpack -w\""
   },
   "dependencies": {
     "@discordjs/opus": "0.2.1",
     "@keyv/redis": "^1.3.8",
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -42,9 +43,10 @@
     "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4",
+    "random-number-csprng": "^1.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "reflect-metadata": "^0.1.13",
     "utf8": "^3.0.0",
@@ -74,7 +76,7 @@
     "@types/passport": "^1.0.3",
     "@types/passport-discord": "^0.1.3",
     "@types/prettier": "^1.19.1",
-    "@types/react-router-dom": "^5.1.4",
+    "@types/react-router-dom": "^5.1.5",
     "@types/stylelint": "^9.10.1",
     "@types/testing-library__jest-dom": "^5.9.1",
     "@types/testing-library__react": "^10.2.0",
@@ -82,17 +84,21 @@
     "@types/webpack": "4.41.18",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.31.0",
-    "concurrently": "^5.1.0",
+    "concurrently": "^5.2.0",
+    "css-loader": "^3.6.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
-    "node-sass": "^4.13.1",
+    "html-webpack-plugin": "^4.3.0",
+    "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
     "prettier": "^1.19.1",
+    "sass-loader": "^9.0.2",
+    "style-loader": "^1.2.1",
     "stylelint": "^13.3.1",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.16.1",
-    "ts-loader": "^6.2.1",
+    "ts-loader": "^8.0.1",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.6",
     "webpack": "4.42.0",
