--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "author": "Jake Stanger",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
+    "build:server": "tsc --project tsconfig.server.json",
+    "build:client": "webpack --env.production",
+    "build": "yarn build:server && yarn build:client",
     "prestart": "yarn build",
     "start": "node lib/index.js",
     "start:dev": "concurrently --names server,client \"nodemon\" \"webpack -w\""
@@ -102,6 +104,7 @@
     "ts-node": "^8.10.2",
     "typescript": "^3.9.6",
     "webpack": "4.42.0",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.10"
   }
 }
