fix(docker): tidy up a bit
yep, it's still a mess of extra unused things right now though.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
-version: '3.8'
+version: '3.3'
 
 services:
-  node:
+  bot:
+    container_name: bot
+    restart: unless-stopped
     env_file:
       - .env
     build:
@@ -18,7 +20,7 @@ services:
   mongo:
     container_name: mongo
     image: mongo:latest
-    restart: always
+    restart: unless-stopped
     ports:
       - 27017:27017
     volumes:
@@ -28,6 +30,7 @@ services:
 
   mongo-express:
     image: mongo-express
+    restart: unless-stopped
     depends_on:
       - mongo
     ports:
