docs: remove my user id from bot owner field

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 ## --- Bot Configuration ---
 
 # Discord user ID for bot owner
-BOT_OWNER_ID=142688838127583232
+BOT_OWNER_ID=
 
 # Postgres connection URL
 DATABASE_URL=postgresql://postgres:changeme@localhost:5432/discotheque2?schema=public
