--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "disco": "node lib/cli.js"
   },
   "dependencies": {
-    "@prisma/cli": "2.15.0",
-    "@prisma/client": "^2.18.0",
+    "@prisma/client": "^2.24.1",
     "@soncodi/signal": "^2.0.7",
     "discord.js": "^12.5.1",
+    "express": "^4.17.1",
     "glob": "^7.1.6",
     "kleur": "^4.1.4",
     "luxon": "^1.25.0",
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/eslint": "^7.2.6",
     "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/express": "^4.17.12",
     "@types/glob": "^7.1.3",
     "@types/luxon": "^1.25.0",
     "@types/node": "^14.14.14",
@@ -40,7 +41,7 @@
     "eslint-plugin-prettier": "^3.3.0",
     "nodemon": "^2.0.6",
     "prettier": "^2.2.1",
-    "prisma": "^2.18.0",
+    "prisma": "^2.24.1",
     "sass": "^1.30.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
