--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,10 @@ SECRETS_KEY=
 # https://github.com/JakeStanger/dgm-database
 DGM_DATABASE_URL=
 
+API_PORT=4000
+API_HOST=127.0.0.1
+API_AUTH_TOKEN=
+
 ## --- Docker Compose Extras ---
 
 INFLUXDB_DATA_ENGINE=tsm1
