--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^2.24.1",
     "@soncodi/signal": "^2.0.7",
+    "cors": "^2.8.5",
     "discord.js": "^12.5.1",
     "express": "^4.17.1",
     "glob": "^7.1.6",
@@ -23,6 +24,7 @@
     "yargs": "^16.2.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/eslint": "^7.2.6",
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/express": "^4.17.12",
